<resources>
    <string name="app_name">Android Terminal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Terminal</string>
    <string name="nav_header_subtitle">mple-mov ipokamboss</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_maps">Overall Map</string>
    <string name="menu_real">Real route Map</string>
    <string name="menu_prediction">Predicted route Map</string>
    <string name="menu_exit">Exit</string>
    <string name="settings">Settings</string>
</resources>