<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.myapplication.Fragments.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_settings"
            android:name="com.example.myapplication.Fragments.SettingsFragment"
            android:label="@string/menu_settings"
            tools:layout="@layout/fragment_settings"/>
    <fragment
            android:id="@+id/nav_maps"
            android:name="com.example.myapplication.Fragments.MapsFragment"
            android:label="@string/menu_maps"
            tools:layout="@layout/fragment_maps"/>
    <fragment
            android:id="@+id/nav_real"
            android:name="com.example.myapplication.Fragments.RealFragment"
            android:label="@string/menu_real"
            tools:layout="@layout/fragment_settings"/>
    <fragment
            android:id="@+id/nav_prediction"
            android:name="com.example.myapplication.Fragments.PredictionsFragment"
            android:label="@string/menu_prediction"
            tools:layout="@layout/fragment_settings"/>
</navigation>